# sistema-calidad-agua

./: README.md  pyproject.toml
sistema_calidad_agua/: db_manager.py  health_check.py  monitor.py  proxy.py  sensor.py  sistema_calidad.py
sistema_calidad_agua/constants/: __init__.py  net.py  values.py
sistema_calidad_agua/db/: data.json
sistema_calidad_agua/helpers/: __init__.py  db_manager.py  files.py  health_check_functions.py  operations.py
